hphp/hack/test/typecheck/constraints/generic_access_bug.php.exp
ERROR: File "generic_access_bug.php", line 15, characters 52-53:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
